# visiontool

./: CMakeLists.txt
algodemo/: CMakeLists.txt
algodemo/include/: mippdemo.h
algodemo/src/: mippdemo.cpp
apidemotest/: CMakeLists.txt
apidemotest/src/: mippunittest.cpp
cmake/: copyfile.cmake  findcv2d.cmake  findeigen3.cmake  findj3dvision.cmake  findopencv.cmake  findqt.cmake  options.cmake  printinfo.cmake  version.rc  versions.cmake
customwidget/: CMakeLists.txt
macro/: exportmacro.hpp
render2d/: CMakeLists.txt
unittest/: CMakeLists.txt
unittest/include/: algotest.h
unittest/src/: main.cpp
visionalgo/: CMakeLists.txt
visionalgo/include/: algobase.h
visionalgo/src/: algobase.cpp
visionengine/: CMakeLists.txt
